# aa-trees

./: CMakeLists.txt  README.md
data/: descending_construction_data.csv  random_construction_data.csv
include/: bs-trees.h  os-trees.h
scripts/: generate_all_results.py  generate_bst_results.py  generate_ost_results.py  run_construction.sh
src/: bs-trees.c  bst-test.c  descending-insert.c  os-algs.c  os-test.c  os-trees.c  random-insert.c
